src/test/resources/errors/array-index.intp
val x = "test"
x[false]